# eventify

./: .dockerignore  .env  .env-example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE-MIT  README.md  docker-compose.yml  openapi.yaml  rustfmt.toml
chainthru/: Cargo.toml  README.md
chainthru-index/: Cargo.toml  README.md
chainthru-index/migrations/: 20230714193104_public_table_block.sql  20230717185608_erc20_table_transfer.sql
chainthru-index/src/: app.rs  block.rs  collector.rs  error.rs  lib.rs  serve.rs  transaction.rs  tx.rs
chainthru-index/src/transaction/: erc20.rs  mod.rs
chainthru-index/src/transaction/erc20/: transfer.rs
chainthru-server/: Cargo.toml  README.md
chainthru-server/src/: lib.rs  startup.rs
chainthru-server/src/api/: block.rs  generic.rs  health.rs  mod.rs
chainthru-server/src/api/transaction/: erc20.rs  mod.rs
chainthru-server/tests/: utilities.rs
chainthru-server/tests/api/: health.rs  helpers.rs
chainthru-tracing/: Cargo.toml  README.md
chainthru-tracing/src/: lib.rs
chainthru-types/: Cargo.toml
chainthru-types/src/: block.rs  erc20.rs  erc721.rs  lib.rs  macros.rs  tx.rs
chainthru/src/: error.rs  lib.rs  main.rs  settings.rs
chainthru/src/settings/: run.rs
crates/chainthru/: Cargo.toml  README.md
crates/chainthru-client/: Cargo.toml  README.md
crates/chainthru-client/docs/: BlockApi.md
crates/chainthru-client/src/apis/: block_api.rs  configuration.rs  log_api.rs  mod.rs  transaction_api.rs
crates/chainthru-index/: Cargo.toml  README.md
crates/chainthru-index/src/: app.rs  collector.rs  error.rs  lib.rs  macros.rs  manager.rs  processor.rs  serve.rs
crates/chainthru-index/src/types/: block_processor.rs  log_processor.rs  mod.rs  process.rs  runner.rs
crates/chainthru-primitives/: Cargo.toml  README.md
crates/chainthru-primitives/src/: block.rs  contract.rs  database.rs  error.rs  events.rs  lib.rs  log.rs  macros.rs  transaction.rs
crates/chainthru-primitives/src/storage/: mod.rs  storage.rs
crates/chainthru-primitives/src/storage/rdms/: mod.rs  pg.rs  postgres.rs
crates/chainthru/src/: error.rs  lib.rs  main.rs  settings.rs
crates/chainthru/src/settings/: config.rs  db.rs  run.rs
crates/chainthru/src/subcommands/: mod.rs  run.rs
crates/eventify/: Cargo.toml  README.md
crates/eventify-configs/: Cargo.toml
crates/eventify-configs/src/: core.rs  database.rs  lib.rs  server.rs
crates/eventify-core/: Cargo.toml  README.md
crates/eventify-core/src/: collector.rs  emit.rs  error.rs  lib.rs  macros.rs  manager.rs  networks.rs  provider.rs  queue.rs  queues.rs  storage.rs  store.rs
crates/eventify-core/src/networks/: arbitrum.rs  avalanche.rs  base.rs  bsc.rs  eth.rs  ethereum.rs  linea.rs  optimism.rs  polygon.rs  zksync.rs
crates/eventify-core/src/provider/: eth.rs  zksync.rs
crates/eventify-core/src/storage/: eth.rs  pg.rs
crates/eventify-core/tests/storage/: eth.rs  main.rs  utils.rs
crates/eventify-engine/: Cargo.toml
crates/eventify-engine/src/: lib.rs
crates/eventify-extensions/: Cargo.toml
crates/eventify-extensions/src/: lib.rs
crates/eventify-http-server/: Cargo.toml  README.md  openapi.yaml
crates/eventify-http-server/src/: lib.rs  startup.rs  types.rs
crates/eventify-http-server/src/api/: block.rs  log.rs  mod.rs  notification.rs  transaction.rs
crates/eventify-http-server/tests/api/: helpers.rs  main.rs
crates/eventify-idx/: Cargo.toml  README.md
crates/eventify-idx/src/: app.rs  cc.rs  clients.rs  collector.rs  error.rs  lib.rs  macros.rs  manager.rs  provider.rs  providers.rs  types.rs
crates/eventify-idx/src/clients/: node.rs  storage.rs
crates/eventify-idx/src/clients/node/: eth.rs
crates/eventify-idx/src/clients/storage/: pg.rs
crates/eventify-idx/src/provider/: eth.rs
crates/eventify-idx/src/providers/: eth.rs  mod.rs
crates/eventify-idx/src/providers/node/: eth.rs
crates/eventify-idx/src/providers/storage/: pg.rs
crates/eventify-idx/src/storage/: pg.rs
crates/eventify-idx/src/types/: collect.rs  mod.rs  node_client.rs  node_provider.rs  process.rs  provider.rs  run.rs  runner.rs  storage.rs  storage_client.rs  storage_provider.rs
crates/eventify-primitives/: Cargo.toml  README.md
crates/eventify-primitives/src/: block.rs  configs.rs  consts.rs  contract.rs  criteria.rs  error.rs  events.rs  lib.rs  log.rs  network.rs  networks.rs  platform.rs  transaction.rs
crates/eventify-primitives/src/config/: server.rs
crates/eventify-primitives/src/configs/: server.rs
crates/eventify-primitives/src/events/: erc1155.rs  erc20.rs  erc4626.rs  erc721.rs  erc777.rs
crates/eventify-primitives/src/network/: block.rs  log.rs  transaction.rs
crates/eventify-primitives/src/networks/: arbitrum.rs  avalanche.rs  base.rs  bsc.rs  core.rs  eth.rs  ethereum.rs  linea.rs  optimism.rs  polygon.rs  zksync.rs
crates/eventify-primitives/src/networks/arbitrum/: block.rs  log.rs
crates/eventify-primitives/src/networks/avalanche/: block.rs  log.rs
crates/eventify-primitives/src/networks/base/: block.rs  log.rs
crates/eventify-primitives/src/networks/bsc/: block.rs  log.rs
crates/eventify-primitives/src/networks/eth/: block.rs  log.rs  transaction.rs
crates/eventify-primitives/src/networks/ethereum/: block.rs  contract.rs  log.rs  transaction.rs
crates/eventify-primitives/src/networks/linea/: block.rs  log.rs
crates/eventify-primitives/src/networks/optimism/: block.rs  log.rs
crates/eventify-primitives/src/networks/polygon/: block.rs  log.rs
crates/eventify-primitives/src/networks/zksync/: block.rs  log.rs
crates/eventify-primitives/src/storage/: auth.rs  storage.rs
crates/eventify-primitives/src/storage/rdms/: pg.rs
crates/eventify-primitives/tests/etl/: arbitrum.rs  avalanche.rs  ethereum.rs  linea.rs  main.rs  optimism.rs  polygon.rs  utils.rs  zksync.rs
crates/eventify/src/: cmd.rs  error.rs  main.rs  settings.rs  subcommands.rs
crates/eventify/src/settings/: core.rs  idx.rs  server.rs
crates/eventify/src/subcommands/: run.rs  stream.rs
(+173 files in other folders)
