[workspace.package]
authors = ["eventify contributors"]
description = "Ethereum Indexer/Event listener"
documentation = "https://docs.rs/eventify"
edition = "2021"
homepage = "https://github.com/lbkolev/eventify"
license = "MIT OR Apache-2.0"
version = "0.0.1"
rust-version = "1.74.0"
readme = "README.md"
repository = "https://github.com/lbkolev/eventify"

[workspace]
members = [
    "crates/eventify",
    "crates/eventify-http-client",
    "crates/eventify-http-server",
    "crates/eventify-idx",
    "crates/eventify-middleware",
    "crates/eventify-primitives"
]
resolver = "2"

[workspace.dependencies]
# internal
eventify-primitives = { path = "./crates/eventify-primitives", version = "0.0.1" }
eventify-idx = { path = "./crates/eventify-idx", version = "0.0.1" }
eventify-http-server = { path = "./crates/eventify-http-server", version = "0.0.1" }
eventify-client = { path = "./crates/eventify-http-client", version = "0.0.1" }
eventify-middleware = { path = "./crates/eventify-middleware", version = "0.0.1" }

# async
async-trait = "0.1.72"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["macros", "full"] }

# core
serde = "1.0.171"
serde-aux = "4.2.0"
serde_derive = "1.0.171"
serde_json = "1.0.104"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }

# eth
alloy-primitives = "0.4.2"
ethers-core = "2.0.11"
ethers-providers = { version = "2.0.11", features = ["ipc", "ws"] }

# auxiliary
clap = "4.3.12"
log = "0.4.19"
num_cpus = "1.16.0"
secrecy = { version = "0.8.0", features = ["serde"] }
thiserror = "1.0.44"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
uuid = { version = "1.4.0", features = ["v4"] }
url = "2.4.0"
