[package]
name = "chainthru-index"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
parallelism = ["dep:rayon"]

[dependencies]
chainthru-primitives.workspace = true

web3.workspace = true
serde-aux.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
futures.workspace = true
log.workspace = true
url.workspace = true
derive_builder.workspace = true

serde = { workspace = true, features = ["derive"]}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1.72"
rayon = { version = "1.7.0", optional = true }
