[package]
name = "chainthru-index"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
parallelism = ["dep:rayon"]

[dependencies]
chainthru-primitives.workspace = true

web3.workspace = true
serde-aux.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
futures.workspace = true
log.workspace = true
url.workspace = true
derive_builder.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tokio.workspace = true
alloy-primitives.workspace = true
#ethers = { workspace = true, features = ["ws"] }
#ethers = { version = "2.0.11", features = ["ws"] }
ethers-providers = "2.0.11"

serde = { workspace = true, features = ["derive"]}
rayon = { version = "1.7.0", optional = true }
ethers-types = "0.0.0-alpha"
ethers-core = "2.0.11"
