[package]
name = "chainthru-server"
authors = [ "Lachezar Kolev <lachezarkolevgg@gmail.com>" ]

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chainthru-types.workspace = true

serde-aux.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
futures.workspace = true
num_cpus.workspace = true
web3.workspace = true
secrecy.workspace = true
uuid.workspace = true

serde = { workspace = true, features = ["derive"]}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
actix-web = "4.3.1"
serde_json = "1.0.103"
reqwest = "0.11.18"
