[package]
name = "chainthru-server"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
chainthru-primitives.workspace = true

serde-aux.workspace = true
serde_derive.workspace = true
thiserror.workspace = true
futures.workspace = true
num_cpus.workspace = true
secrecy.workspace = true
uuid.workspace = true
serde_json.workspace = true
log.workspace = true
sqlx.workspace = true

serde = { workspace = true, features = ["derive"]}
tokio = { workspace = true, features = ["full"] }
actix-web = "4.3.1"
reqwest = "0.11.18"