[package]
name = "chainthru"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "chainthru"

[dependencies]
chainthru-index.workspace = true
chainthru-server.workspace = true
chainthru-primitives.workspace = true

web3.workspace = true
futures.workspace = true
log.workspace = true
num_cpus.workspace = true
url.workspace = true
secrecy.workspace = true
sqlx.workspace = true
tokio.workspace = true
alloy-primitives.workspace = true
thiserror.workspace = true
clap = { version = "4.3.12", features = ["derive", "env"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
temp-env = "0.3.6"
serial_test = "2.0.0"
