[package]
name = "chainthru-client"
version = "0.0.0-reserved"
authors = ["lachezarkolevgg@gmail.com"]
description = "Ethereum Indexer"
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
