[package]
name = "chainthru-index"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
parallelism = ["dep:rayon"]

[dependencies]
# internal
chainthru-primitives.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# core
serde-aux.workspace = true
serde_derive.workspace = true
serde.workspace = true
sqlx.workspace = true

# eth
alloy-primitives.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true

# auxiliary
log.workspace = true
thiserror.workspace = true
url.workspace = true
rayon = { version = "1.7.0", optional = true }
