[package]
name = "chainthru-primitives"

authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
derive_builder.workspace = true
sqlx.workspace = true
url.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
thiserror.workspace = true
secrecy.workspace = true
log.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true
clap.workspace = true