[package]
name = "eventify-configs"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventify-primitives.workspace = true

serde.workspace = true
serde-aux.workspace = true
secrecy.workspace = true
url.workspace = true
sqlx.workspace = true
either.workspace = true
alloy-primitives.workspace = true