[package]
name = "eventify-configs"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
eventify-primitives.workspace = true

serde.workspace = true
serde-aux.workspace = true
url.workspace = true
sqlx.workspace = true
either.workspace = true
alloy-primitives.workspace = true
num_cpus.workspace = true

[dev-dependencies]
toml.workspace = true