[package]
name = "eventify-core"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = [
    "eth",
]

# chain
eth = []
zksync = []
starknet = []

[dependencies]
# internal
eventify-primitives.workspace = true
eventify-configs.workspace = true

# async
futures.workspace = true
tokio.workspace = true

# core
serde.workspace = true
serde-aux.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true

# eth
alloy-primitives = { workspace = true, features = ["postgres"]}

# auxiliary
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
rayon = { version = "1.7.0", optional = true }
jsonrpsee = { version = "0.21.0", features = ["full"]}
eyre.workspace = true

[dev-dependencies]
dotenv = "0.15.0"
serde_json.workspace = true
uuid.workspace = true
