[package]
name = "eventify-core"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = [
    "eth",
]

# chain
eth = []
zksync = []

[dependencies]
# internal
eventify-primitives.workspace = true
eventify-configs.workspace = true

futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
alloy-primitives = { workspace = true, features = ["postgres"]}
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
eyre.workspace = true
rayon = { version = "1.7.0", optional = true }
jsonrpsee = { version = "0.21.0", features = ["full"]}
reconnecting-jsonrpsee-ws-client = "0.2.0"

[dev-dependencies]
dotenv = "0.15.0"
serde_json.workspace = true
uuid.workspace = true
