[package]
name = "eventify-core"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = [
    "eth", "propagate"
]

# chain
eth = []
zksync = []

#
index = []
propagate = []

[dependencies]
# internal
eventify-primitives.workspace = true
eventify-configs.workspace = true

futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde-aux.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
alloy-primitives = { workspace = true, features = ["postgres"]}
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
eyre.workspace = true
rayon = { version = "1.7.0", optional = true }
alloy-sol-types = "0.6.2"
reconnecting-jsonrpsee-ws-client = "0.3.0"

[dev-dependencies]
dotenv = "0.15.0"
serde_json.workspace = true
uuid.workspace = true
