[package]
name = "eventify-engine"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventify-primitives.workspace = true
eventify-configs.workspace = true

serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

tokio.workspace = true
futures.workspace = true

eyre.workspace = true
chrono = "0.4.33"
serenity = "0.12.0"