[package]
name = "eventify-idx"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = [
    "eth",
    "http",
    "postgres",
]

# chain
eth = []

# provider
http = []
ws = []
ipc = []

# database
postgres = []

[dependencies]
# internal
eventify-primitives.workspace = true

# async
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# core
serde.workspace = true
serde-aux.workspace = true
serde_derive.workspace = true
sqlx.workspace = true

# eth
alloy-primitives.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true

# auxiliary
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
rayon = { version = "1.7.0", optional = true }
jsonrpsee = { version = "0.21.0", features = ["full"]}
serde_json.workspace = true

[dev-dependencies]
dotenv = "0.15.0"
serde_json.workspace = true
uuid.workspace = true
