[package]
name = "eventify-cli"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "eventify"

[dependencies]
# internal
eventify-core = { workspace = true, features = ["eth", "zksync", "starknet"] }
eventify-http-server.workspace = true
eventify-primitives.workspace = true
eventify-configs.workspace = true

# async
futures.workspace = true
tokio.workspace = true

# core
clap = { workspace = true, features = ["derive", "env"] }
sqlx.workspace = true
redis.workspace = true

# eth
alloy-primitives.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# auxiliary
num_cpus.workspace = true
url.workspace = true
secrecy.workspace = true
thiserror.workspace = true
eyre.workspace = true
either.workspace = true

[dev-dependencies]
temp-env = "0.3.6"
serial_test = "2.0.0"
